--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   equatable: ^2.0.8
   flutter_bloc: ^9.1.1
   get_it: ^9.2.0
+  animated_text_kit: ^4.3.0
 
 dev_dependencies:
   flutter_test:
