--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_bloc: ^9.1.1
   get_it: ^9.2.0
   animated_text_kit: ^4.3.0
+  intl: ^0.20.2
+  google_generative_ai: ^0.4.7
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
